fix(introduction): stop line overlap

--- a/src/app/views/home-page/home-page.component.less
+++ b/src/app/views/home-page/home-page.component.less
@@ -76,6 +76,7 @@
     .text-container {
       text-align: center;
       font-size: 36px;
+      line-height: calc(20 / 14);
       margin: 0 10px 0 10px;
 
       @media screen and (max-width: @mobile-max-width) {
